--- a/zadaca1.html
+++ b/zadaca1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -29,31 +30,31 @@
   <fieldset>
     <legend>Sandwiches</legend>
     
-    <label for="fname">Monday</label><br>
+    <label for="fname"><span class="days"> Monday</span></label><br>
     <input type="radio" id="TM" name="sandwiches" value="TomatoMozzarella">
 <label for="TM">Tomato Mozzarella</label><br>
 <input type="radio" id="CS" name="sandwiches" value="CHikenSalad">
 <label for="CS">Chiken Salad</label><br><br>
 
-<label for="fname">Tuesday</label><br>
+<label for="fname"><span class="days">Tuesday</span></label><br>
     <input type="radio" id="GSW" name="sandwiches" value="GreekSaladWrap">
 <label for="GSW">Greek Salad Wrap</label><br>
 <input type="radio" id="TW" name="sandwiches" value="TotoWrap">
 <label for="TW">Toto Wrap</label><br><br>
 
-<label for="fname">Wednesday</label><br>
+<label for="fname"><sapn class="days">Wednesday</sapn></label><br>
     <input type="radio" id="RPH" name="sandwiches" value="RedPepperHummus">
 <label for="RPH">Red Pepper Hummus</label><br>
 <input type="radio" id="RT" name="sandwiches" value="RoastedTurkey">
 <label for="RT">Roasted Turkey</label><br><br>
 
-<label for="fname">Thursday</label><br>
+<label for="fname"><span class="days">Thursday</span></label><br>
     <input type="radio" id="CGW" name="sandwiches" value="Carrot-GingerHummusWrap">
 <label for="CGW">Carrot-Ginger Hummus Wrap</label><br>
 <input type="radio" id="ES" name="sandwiches" value="EggSalad">
 <label for="ES">Egg Salad</label><br><br>
 
-<label for="fname">Friday</label><br>
+<label for="fname"><span class="days">Friday</span></label><br>
     <input type="radio" id="DW" name="sandwiches" value="DadoWrap">
 <label for="DW">Dado Wrap</label><br>
 <input type="radio" id="TS" name="sandwiches" value="TunaSalad">
